fl#valid_tests/tests/invalid/cre.tpa
DEFINE_ACTION_FUNCTION fl#valid_tests#tests#invalid#cre
  RET
    success
    fail
BEGIN
  OUTER_SPRINT file_root "%MOD_FOLDER%/tests/invalid/cre"

  ACTION_DEFINE_ASSOCIATIVE_ARRAY invalid#cre BEGIN

  END

  ACTION_PHP_EACH invalid#cre AS file => desc BEGIN
    LAF test_invalid STR_VAR file = EVAL "%file_root%/%file%.cre" desc RET success fail END
  END
END

LAF fl#valid_tests#tests#invalid#cre RET success fail END
